Fix op up button width on mobile and tablet size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,6 +284,7 @@ footer {
 .pop-up-box button {
     background-color: black;
     color: white;
+    width: 20vw;
     font-size: 0.9rem;
     margin: 10px 10px 0px 10px;
     padding: 0 5px;
